MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/Reminder_Task__c.object-meta.xml
<CustomObject>
    <label>Reminder Task</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Reminder Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>