MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Audience_Key__c.field-meta.xml
<CustomField>
    <fullName>Audience_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audience Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>