MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>