MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Message_Log__c.field-meta.xml
<CustomField>
    <fullName>Message_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message Log</label>
    <referenceTo>WhatsApp_Message_Log__c</referenceTo>
    <relationshipLabel>Reminder Tasks</relationshipLabel>
    <relationshipName>Reminder_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>