MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Payload_Key__c.field-meta.xml
<CustomField>
    <fullName>Payload_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Payload Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>