MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>