MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Reminder_Stage__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reminder Stage</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>