MODON MRE BPDEV/force-app/main/default/objects/Reminder_Task__c/fields/Reminder_Type__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reminder Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>